<resources>
    <string name="app_name">taskmaster</string>
    <string name="title_activity_add_task">AddTask</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="link">

        <a href="https://github.com/joj5/401-TEMP/tree/main/curriculum/class-37/demo/budget/app/src/main/java/com/recurjun/budget/ui">Link </a>
    </string>
    <string name="team">Team</string>
    <string name="uploade">Uploade</string>
    <string name="state">State</string>
    <string name="add">Add</string>
    <string name="body">Body</string>
    <string name="title">Title</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
<!--    <string name="todo">TODO</string>-->
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
<!--    <string name="setting">Setting</string>-->
    <string name="log_out">Log out</string>
    <string name="team_name">Team Name</string>
<!--    <string name="user_name">User Name:</string>-->
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
<!--    <string name="user_name">User Name:</string>-->
<!--    <string name="password">Password</string>-->
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="description">Description</string>
    <string name="states">states</string>
<!--    <string name="title">Title</string>-->
    <string name="details">Details</string>
    <string name="the_title">The Title :</string>
    <string name="the_description">The Description:</string>
    <string name="the_state">The State:</string>
    <string name="code">code</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code:</string>
<!--    <string name="textview">TextView</string>-->
<!--    <string name="textview">TextView</string>-->
    <string name="textview">TextView</string>
    <string name="detail">Detail</string>
</resources>