<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:text="@string/user_name"
        app:layout_constraintBottom_toBottomOf="@+id/userNameEditLogIn"
        app:layout_constraintEnd_toStartOf="@+id/userNameEditLogIn" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordEditLogin"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditLogin" />

    <EditText
        tools:ignore="LabelFor"

        android:autofillHints="username"
        android:id="@+id/passwordEditLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:autofillHints="textEmailAddress"
        tools:ignore="LabelFor"

        android:id="@+id/userNameEditLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditLogin"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="68dp"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>